Bug 136162 - [UI] GtkMenuItem causes crash when accessible-description is used (for extended tips)
Summary: [UI] GtkMenuItem causes crash when accessible-description is used (for extend...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
7.1.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.1.0
Keywords:
: 136329 (view as bug list)
Depends on:
Blocks:
 
Reported: 2020-08-26 22:52 UTC by Olivier Hallot
Modified: 2020-08-31 17:31 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
UI file with accessible-description objects in GtkMenuItem (15.66 KB, application/x-designer)
2020-08-26 22:52 UTC, Olivier Hallot
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Olivier Hallot 2020-08-26 22:52:07 UTC
Created attachment 164730 [details]
UI file with accessible-description objects in GtkMenuItem

The attached file is the UI file for Accept/Reject changes in Calc and Writer. It contains accessible-description contents in GtkMenuItem objects. LibreOffice master crash when the ui file is used.

Removing accessible-description from 

<object class="GtkMenuItem" id="writeredit">

and

<object class="GtkMenuItem" id="calcedit">

does not crash the master build.


Version: 7.1.0.0.alpha0+
Build ID: 13a60d9ca50fce5492b35be891f64a5f77901ef0
CPU threads: 16; OS: Linux 5.4; UI render: default; VCL: kf5
Locale: en-US (en_US.UTF-8); UI: pt-BR
Calc: CL
Comment 1 Julien Nabet 2020-08-27 10:18:12 UTC
On pc Debian x86-64 with master sources updated today, I can't succeed in crashing.
Here what I did:
- retrieved the file
- put it in svx/uiconfig/ui
- built
=> it's now present in ./instdir/share/config/soffice.cfg/svx/ui
- created a brand new file with lorum ipsum + saved the file
- reopened the file
- enabled track changes
- did some changes

Did I miss something?
Comment 2 Caolán McNamara 2020-08-27 10:23:51 UTC
probably missed the "VCL: kf5" piece, this is with a non-gtk backend where we never implemented this accessibility name/description for menu entries loaded from .ui files
Comment 3 Commit Notification 2020-08-27 12:34:44 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/7d0279121f099aa36fcee3f0df207bdbcee75ad4

tdf#136162 implement applying atk properties to gen menus

It will be available in 7.1.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Olivier Hallot 2020-08-31 17:31:51 UTC
*** Bug 136329 has been marked as a duplicate of this bug. ***