tdf#136162 implement applying atk properties to gen menus

Change-Id: I77dbc21910b01524d281869a83d9d12efd419bf6