vcl/source/window/menu.cxx
@@ -2289,6 +2289,18 @@ tools::Rectangle Menu::GetBoundingRectangle( sal_uInt16 nPos ) const
     return aRet;
 }
 
+void Menu::SetAccessibleName( sal_uInt16 nItemId, const OUString& rStr )
+{
+    size_t nPos;
+    MenuItemData* pData = pItemList->GetData( nItemId, nPos );
+
+    if (pData && !rStr.equals(pData->aAccessibleName))
+    {
+        pData->aAccessibleName = rStr;
+        ImplCallEventListeners(VclEventId::MenuAccessibleNameChanged, nPos);
+    }
+}
+
 OUString Menu::GetAccessibleName( sal_uInt16 nItemId ) const
 {
     MenuItemData* pData = pItemList->GetData( nItemId );
@@ -2297,6 +2309,24 @@ OUString Menu::GetAccessibleName( sal_uInt16 nItemId ) const
         return pData->aAccessibleName;
 
     return OUString();
+}
+
+void Menu::SetAccessibleDescription( sal_uInt16 nItemId, const OUString& rStr )
+{
+    MenuItemData* pData = pItemList->GetData( nItemId );
+
+    if ( pData )
+        pData->aAccessibleDescription = rStr;
+}
+
+OUString Menu::GetAccessibleDescription( sal_uInt16 nItemId ) const
+{
+    MenuItemData* pData = pItemList->GetData( nItemId );
+
+    if (pData && !pData->aAccessibleDescription.isEmpty())
+        return pData->aAccessibleDescription;
+
+    return GetHelpText(nItemId);
 }
 
 void Menu::GetSystemMenuData( SystemMenuData* pData ) const
